--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,14 @@
 .App {
-  text-align: center;
+  width: 800px;
 }
 
-.App-logo {
-  height: 40vmin;
+.container {
+  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+  height: 600px;
+  max-width: 800px;
+  width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.weather {
+  height: 400px;
 }
